# poe-demo

./: .gitignore  pyproject.toml
src/poe_demo/: __init__.py
tests/: test_dummy.py
